--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.11",
-    "react-router-dom": "^6.17.0"
+    "react-error-boundary": "^4.0.11"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
